--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                                     Системный администратор
                                 </h4>
                                 <p>
-								    Умею быстро разбираться с новым программным обеспечением и техникой. <br> Любые появляющиеся проблемы разбираются, чтобы предотравитть появление их в будущем.
-                                 <br>   Небольшой сайт-визитка для резмещения резюме. Хостингом послужил свервис github.
+								    Умею быстро разбираться с новым программным обеспечением и техникой. 
                                 </p>
                             </div>
                         </div>
