--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     Системный администратор
                                 </h4>
                                 <p>
-								    Умею быстро разбираться с новым программным обеспечением и техникой. 
+								    ABOUT ME
                                 </p>
                             </div>
                         </div>
