--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Main Tab Container -->
         <div id="tab-container" class="tab-container">
 			<div id="feedback">
-			<a href="/feedback_url/">Печать</a>
+    <a class="OverlayTrigger" href="{xen:link 'misc/contact'}"></a>
 			</div>
           <!-- Tab List -->
             <ul class='etabs'>
