--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 </head>
-  
+<div id="feedback">
+  <a href="/feedback_url/">feedback</a>
+</div>  
 <head> 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -55,7 +57,7 @@
         <div id="tab-container" class="tab-container">
 			<div id="feedback">
     <a class="OverlayTrigger" href="{xen:link 'misc/contact'}"></a>
-			</div>
+			http://dflzqrzibliy5.cloudfront.net//images3/logo.png?v=2</div>
           <!-- Tab List -->
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
