--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 </head>
-<div id="feedback">
-  <a href="/feedback_url/">feedback</a>
+<div id="print">
+  <a href="/feedback_url/">Версия для печати</a>
 </div>  
 <head> 
   <meta charset="utf-8">
