--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 </head>
 <div id="print">
-  <a href="/print.html">Версия для печати</a>
+  <a href="/print">Версия для печати</a>
 </div>  
 <head> 
   <meta charset="utf-8">
