--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                              <i class="icon-pinterest-p"></i>
                               <div class="item-data">
-                                <h3><a href="">@Heyzi</a></h3>
-                                <p>Профиль в Twitter</p>
+                                <h3><a href="">Alexandr</a></h3>
+                                <p>Профиль на Rabota.ru</p>
                               </div>
                             </div>
                           </div>
