--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-pinterest-p"></i>
+                              <i class="icon-paypal"></i>
                               <div class="item-data">
                                 <h3><a href="">Alexandr</a></h3>
                                 <p>Профиль на Rabota.ru</p>
