--- a/print.html
+++ b/print.html
@@ -14,7 +14,7 @@
 	<meta content="General" name="rating">
 	<meta content="Global" name="distribution">
 	
-
+	
 	<link rel="stylesheet" type="text/css" href="./print_files/main.css">
 <link rel="stylesheet" type="text/css" href="./print_files/page.css">
 <link rel="stylesheet" type="text/css" href="./print_files/res-print.css">
@@ -37,8 +37,7 @@
 <div class="pt10 pr_10 pl15 text_12">
 		<link href="./print_files/res-print.css" type="text/css" rel="stylesheet">
 
-
-
+		<div class="clearfix">
 		<input class="print_input blue_btn ml20 mb_0" type="button" value="Печать страницы" onclick="$(&#39;.print_input&#39;).hide();window.print();setTimeout(function(){$(&#39;.print_input&#39;).show();}, 1000);">
 
 		<div class="b-main-part">
@@ -102,7 +101,7 @@
 				<p class="b-sex-age" style="display: none;">23 года (17.03.1992), 					мужчина				</p>					<div class="contact_appl">
 				<p class="candidate-name">Платонов Александр Андреевич</p>
 <p class="b-sex-age">23 года (17.03.1992), 	мужчина</p>	<p class="text_14 mt_15 email-phone">Тел. +7 (921) 8475171 c 09-00 до 18-00, e-mail: <a href="mailto:alexandr@niuitmo.ru">alexandr@niuitmo.ru</a>, 
-						<span>Профиль в соц.сети:</span> http://pingall.ru/resume/</p>			</div>
+						<span>Профиль в соц.сети:</span> http://pingall.ru</p>			</div>
 				<p class="b-city-info mt_10">Санкт-Петербург</p>
 				<div id="resume_metro_list" class="b-metro-list mt_3 lh_20">
 									</div>					<p class="b-citizenship-info">
@@ -144,7 +143,7 @@
 						<td class="td1 pt15"><span class="text_14 gray9_text">Стаж в желаемой должности</span>
 						</td>
 						<td class="td2 pt12">
-							<span class="text_18 bold exp-years">1 год</span>
+							<span class="text_18 bold exp-years">2 года</span>
 						</td>
 						<td class="td3">
 						</td>
@@ -153,21 +152,20 @@
 						<td class="td1 pt12"><span class="text_14 gray9_text">Профессиональные навыки</span>
 						</td>
 						<td class="td2 pt12">
-							<div class="b-skills-desrc">								- Хорошее знание ПК и прикладного ПО. ОС Windows, Linux. <br>
-<br>
-- Сборка, настройка, диагностика ПК и ноутбуков. <br>
-<br>
-- Ремонт: ПК, ноутбуков, навигаторов, планшетов оргтехники, сетевого оборудования, периферии. <br>
-<br>
-- Монтаж, настройка, администрирование ЛВС. VPN. Коммутация, телефония. <br>
-<br>
-- Установка, настройка, администрирование программного обеспечения. <br>
-<br>
-- Основы AD, Samba. <br>
-<br>
-- Опыт удаленного администрирования Team Viewer, RAdmin, RDP, PuTTY. <br>
-<br>
-- Умение быстро разбираться: с новым ПО‚ техникой							</div>
+							<div class="b-skills-desrc">								- Настройка, монтаж сетевого оборудования Cisco, D-link, Zyxel<br>
+- Удаленное администрирование Team Viewer, RAdmin, RDP, PuTTY. <br>
+- ОС семейства Windows.<br>
+- Active Directory;<br>
+- Скрипты на VBS, bash, batch; <br>
+- Антивирусное ПО. <br>
+- Проектирование и монтаж СКС. <br>
+- Настройка и обслуживание оргтехники.<br>
+- Подготовка рабочих мест (установка ПО, ввод в домен, настройка ПО, разграничение доступа).<br>
+- Создание L2 VPN соединений.<br>
+- Организация резервного копирования<br>
+- Поддержание в работоспособном состоянии  локальной сети.<br>
+Установка, поддержка и обновление:<br>
+- обновление конфигурации 1С Бухгалтерия предприятия 8.2, выгрузка информационной базы 1С 8.2.							</div>
 						</td>
 						<td class="td3">
 						</td>
@@ -181,7 +179,7 @@
 							Высшее, 						</span>
 							<span class="edu-type-info">Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики</span>,
 							<span class="mt_5 lh_20 edu-type-info">
-								2014							</span>					</td>
+								2016							</span>					</td>
 					<td class="td3">&nbsp;</td>
 				</tr>
 				</tbody>
@@ -199,11 +197,11 @@
 					<td class="td1">
 						<div class="b-work-period">
 							<p class="b-work-period__years">
-								2013,
-								август								—
+								2012,
+								ноябрь								—
 								<br>2014, декабрь							</p>
 							<p class="gray9_text">
-								1 год 4 мес																							</p>
+								2 года 1 мес																							</p>
 						</div>
 					</td>
 					<td class="td2">
@@ -214,7 +212,7 @@
 								Сервисный центр "Юним"							</p>
 
 							<p class="gray9_text company-type" style="margin-bottom: 6px;">It-компания, Гатчина							</p>
-						<p class="lh_20 p-res-exp">Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры.</p>
+						<p class="lh_20 p-res-exp">- Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры.<br>- Восстановление данных<br>- Консультирование и обучение пользователей.<br>- Удаление баннеров</p>
 						</div>
 					</td>
 
@@ -225,6 +223,21 @@
 		<div class="b-main-info mb_0">
 			<table class="w100 res-card-tbl">			<tbody><tr>
 				<td class="td1 pt15">						<span class="text_14 gray9_text">Основное образование</span>
+					<div class="edu-year">2016 г.в.</div>
+				</td>
+				<td class="td2 pt12">
+					<p class="text_18 bold edu-type-ttl">
+						Высшее образование (магистр)					</p>
+
+					<p class="mt_4 lh_20 school-name">Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики</p>
+
+					<div class="mt_5 gray9_text profes-info">Системное администрирование аппаратно-программных комплексов и сетей, Кафедра аппаратно-программных комплексов вычислительной техники.					</div>
+									</td>
+				<td class="td3">
+					&nbsp;
+				</td>
+			</tr>			<tr>
+				<td class="td1 pt15">
 					<div class="edu-year">2014 г.в.</div>
 				</td>
 				<td class="td2 pt12">
@@ -233,11 +246,47 @@
 
 					<p class="mt_4 lh_20 school-name">Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики</p>
 
-					<div class="mt_5 gray9_text profes-info">Информатика и вычислительная техника.					</div>
+					<div class="mt_5 gray9_text profes-info">Информатика и вычислительная техника., Компьютерных технологий и управления					</div>
 									</td>
 				<td class="td3">
 					&nbsp;
 				</td>
+			</tr>
+			<tr>
+				<td class="td1 pt15 vt">					<span class="text_14 gray9_text">Дополнительное образование</span>
+					<div class="edu-year">
+						<p class="mt_4">
+							<span class="fontw_normal">2015 г.в.</span>
+						</p>
+					</div>
+				</td>
+				<td class="td2 pt12">					<span class="bold courses-ttl">Курсы, повышение квалификации</span>
+					<p class="mt_4">
+						Северо-Западный региональный учебный центр ZyXEL в  НИУ ИТМО					</p>
+					<p class="mt_5 gray9_text profes-info">
+						ZCNE Security Level 1,
+
+											</p>
+				</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td class="td1 pt15 vt">
+					<div class="edu-year">
+						<p class="mt_4">
+							<span class="fontw_normal">2014 г.в.</span>
+						</p>
+					</div>
+				</td>
+				<td class="td2 pt12">
+					<p class="mt_4">
+						Северо-Западный региональный учебный центр ZyXEL в  НИУ ИТМО					</p>
+					<p class="mt_5 gray9_text profes-info">
+						ZyXEL Certified Network Engineer (Специализация Ethernet),
+
+											</p>
+				</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td class="td1"></td>
@@ -258,12 +307,11 @@
 				<td class="td2 pt12">						<div class="mb_15">
 							<p class="driving-lic bold">Водительские права</p><p>
 							</p><p class="mt_4 p-res-qua">
-							</p><p class="mb_5 p-res-qua drive-info">Категория B</p>						</div>
-						<div class="mb_15">
-							<p class="aboutme-ttl bold">О себе</p>
-							<p class="mt_4 p-res-qua lh_20 aboutme-info">Есть сертификат ZyXEL Certified Network Engineer (Специализация Ethernet)							</p>
-							</div>
-						
+							</p><p class="mb_5 p-res-qua drive-info">Категория B</p>						</div>						<div class="mb_15">
+						<p class="marriage-ttl bold">Семейное положение</p>
+						<p class="mt_4 p-res-qua marriage-info">								<span>Холост</span>, 							<span>Детей нет</span>
+						</p>
+						</div>
 				</td>
 				<td>
 					&nbsp;
