--- a/index.html
+++ b/index.html
@@ -85,7 +85,21 @@
                                     Системный администратор
                                 </h4>
                                 <p>
-								    ABOUT ME
+							<br>	    - Настройка, монтаж сетевого оборудования Cisco, D-link, Zyxel
+							<br>		- Удаленное администрирование Team Viewer, RAdmin, RDP, PuTTY. 
+							<br>		- ОС семейства Windows.
+							<br>		- Active Directory;
+							<br>		- Скрипты на VBS, bash, batch; 
+							<br>		- Антивирусное ПО. 
+							<br>		- Проектирование и монтаж СКС. 
+							<br>		- Настройка и обслуживание оргтехники.
+							<br>		- Подготовка рабочих мест (установка ПО, ввод в домен, настройка ПО, разграничение доступа).
+							<br>		- Создание L2 VPN соединений.
+							<br>		- Организация резервного копирования
+							<br>		- Поддержание в работоспособном состоянии локальной сети.
+							<br>			Установка, поддержка и обновление:
+							<br>			- обновление конфигурации 1С Бухгалтерия предприятия 8.2, выгрузка информационной базы 1С 8.2.
+
                                 </p>
                             </div>
                         </div>
@@ -126,8 +140,8 @@
                             <div class="item-box clearfix">
                               <i class="icon-pinterest"></i>
                               <div class="item-data">
-                                <h3><a href="">Alexandr</a></h3>
-                                <p>Профиль на Rabota.ru</p>
+                                <h3><a href="http://spb.rabota.ru/resume12634783.html">Александр</a></h3>
+                                <p>Резюме на Rabota.ru</p>
                               </div>
                             </div>
                           </div>
@@ -157,8 +171,10 @@
                                     </h5><span class="label label-info">2013-2015(январь)</span>
                                     <p>
                                      Сервисный центр "Юним". 
-									 <br/>Ремонт компьютеров, ноутбуков, планшетов, навигаторов. 
-									 <br/>Настройка, установка и обновление ПО.  
+								<br>		- Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры.
+								<br>		- Восстановление данных
+								<br>		- Консультирование и обучение пользователей.
+								<br>		- Удаление баннеров 
                                     </p>
                                 </li>
 								  <li>
