--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                                     Системный администратор
                                 </h4>
                                 <p>
-							<br>	    - Настройка, монтаж сетевого оборудования Cisco, D-link, Zyxel
-							<br>		- Удаленное администрирование Team Viewer, RAdmin, RDP, PuTTY. 
-							<br>		- ОС семейства Windows.
+							<br>	    - Настройка, монтаж сетевого оборудования Cisco, D-link, ZyXEL;
+							<br>		- Удаленное администрирование Team Viewer, RAdmin, RDP, PuTTY; 
+							<br>		- ОС семейства Windows;
 							<br>		- Active Directory;
 							<br>		- Скрипты на VBS, bash, batch; 
-							<br>		- Антивирусное ПО. 
-							<br>		- Проектирование и монтаж СКС. 
-							<br>		- Настройка и обслуживание оргтехники.
-							<br>		- Подготовка рабочих мест (установка ПО, ввод в домен, настройка ПО, разграничение доступа).
-							<br>		- Создание L2 VPN соединений.
-							<br>		- Организация резервного копирования
-							<br>		- Поддержание в работоспособном состоянии локальной сети.
+							<br>		- Антивирусное ПО; 
+							<br>		- Проектирование и монтаж СКС; 
+							<br>		- Настройка и обслуживание оргтехники;
+							<br>		- Подготовка рабочих мест (установка ПО, ввод в домен, настройка ПО, разграничение доступа);
+							<br>		- Создание L2 VPN соединений;
+							<br>		- Организация резервного копирования;
+							<br>		- Поддержание в работоспособном состоянии локальной сети;
 							<br>			Установка, поддержка и обновление:
-							<br>			- обновление конфигурации 1С Бухгалтерия предприятия 8.2, выгрузка информационной базы 1С 8.2.
+							<br>			- обновление конфигурации 1С Бухгалтерия предприятия 8.2, выгрузка информационной базы 1С 8.2;
 
                                 </p>
                             </div>
