--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <li>
                                     <h5>
                                         Инженер сервисного центра
-                                    </h5><span class="label label-info">2013-2015(январь)</span>
+                                    </h5><span class="label label-info">2012(февраль)-2014(декабрь)</span>
                                     <p>
                                      Сервисный центр "Юним". 
 								<br>		- Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры.
