--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>CVius</title>
+	<title>Платонов Александр</title>
 
 	<!-- favicon -->
 	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -360,7 +360,7 @@
 							<div class="clearfix"></div>
 						</div>
 						<div class="section-content">
-			
+
 							<div class="row">
 
 								<!-- start google map -->
@@ -369,21 +369,7 @@
 								
 								<!-- start contact form -->
 								<div id="form" class="col-xs-12 col-sm-6">
-									<form role="form">
-										<div>Отправить мне сообщение</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Your Name">
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Your Email">
-										</div>
-										<div class="form-group">
-											<textarea class="form-control" placeholder="Your Message"></textarea>
-										</div>
-										<button type="submit" class="btn btn-default">
-											<span class="icon icon-point-right"></span>Send
-										</button>
-								  </form>
+									
 								</div>
 								<!-- end contact form -->
 
