--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
 								<div class="icon">
 									<span class="icon icon-map"></span><span class="icon icon-map"></span>
 								</div>
-								<div class="info">Nashville, Oklahoma</div>
+								<div class="info">Гатчина</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
 								<div class="icon">
 									<span class="icon icon-phone-hang-up"></span><span class="icon icon-phone-hang-up"></span>
 								</div>
-								<div class="info">0906-683-7181</div>
+								<div class="info">+79218475171</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
 								<div class="icon">
 									<span class="icon icon-envelope"></span><span class="icon icon-envelope"></span>
 								</div>
-								<div class="info">exelthemes@gmail.com</div>
+								<div class="info">planol@me.com</div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
@@ -115,8 +115,8 @@
 		  
 						<!-- start letter head -->
 						<div id="personal">
-							<div class="name">Mark Narendra</div>
-							<div class="position">Web Developer | Graphic Artist</div>
+							<div class="name">Платонов Александр</div>
+							<div class="position">Системный администратор | Веб разработчик</div>
 							<div class="letter">Pid porta placerat a aliquam tortor sed aliquam mattis tempor et cras est dolor cum integer a quis, aenean porta placerat a aliquam tortor sed aliquam mattis tempor et cras est dolor cum integer a quis, aenean porta placerat a aliquam tortor sed aliquam mattis tempor et cras est dolor cum integer a quis, aenean sed aliquam mattis tempor et cras est dolor cum integer a quis.</div>
 						</div>
 						<!-- end letter head -->
@@ -178,7 +178,7 @@
 							<section id="educational-attainment">
 								<div class="section-head">
 									<span class="icon icon-book"></span>
-									<span class="label">Educational Attainment</span>
+									<span class="label">Обучение</span>
 									<div class="clearfix"></div>
 								</div>
 								<div class="section-content">
@@ -221,7 +221,7 @@
 							<section id="working-experience">
 								<div class="section-head">
 									<span class="icon icon-user4"></span>
-									<span class="label">Working Experience</span>
+									<span class="label">Опыт работы</span>
 									<div class="clearfix"></div>
 								</div>
 								<div class="section-content">
@@ -289,7 +289,7 @@
 					<section id="skills" class="adjust-top nav-skills">
 						<div class="section-head">
 							<span class="icon icon-signup"></span>
-							<span class="label">Skills</span>
+							<span class="label">Способности</span>
 							<div class="clearfix"></div>
 						</div>
 						<div class="section-content">
