--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav subMenu">
-						<li><a href="/print">Печать</a> </li>
+						<li><a href="/print">Версия для <br>печати</a> </li>
 					</ul>
 				</div>
 			</div>
