--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav subMenu">
-						<li><a href="/print">Версия для <br>печати</a> </li>
+						<li><a href="/print">Печать</a> </li>
 					</ul>
 				</div>
 			</div>
@@ -60,8 +60,6 @@
 			<div class="row" id="top">
 
 				<div id="left-sidebar" class="col-md-2">
-
-
 					<!-- start avatar -->
 					<div id="avatar">
 						<img src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" class="img-rounded" alt="avatar">
