--- a/index.html
+++ b/index.html
@@ -210,51 +210,53 @@
 								<div class="section-content">
 									<ul class="cbp_tmtimeline">
 										<li>
-											<div class="cbp_tmtime"><span>Jan 2009 - March 2010</span> <span>Web Developer</span></div>
+											<div class="cbp_tmtime"><span>2015 - 2015</span> <span>Freelance</span></div>
 											<div class="cbp_tmicon"><span class="icon icon-briefcase"></span></div>
 											<div class="cbp_tmlabel">
-												<h2>Abc Training</h2>
+												<h2>Freelance</h2>
 												<p>
 													<span class="task">
 														<span class="icon icon-checkmark"></span>
-														<span class="description">Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber watercress.</span>
+														<span class="description">Создание сайтов-визиток. Ремонт компьютеров и ноутбуков.</span>
 													</span>
-													<span class="task">
-														<span class="icon icon-checkmark"></span>
-														<span class="description">Pea sprouts wattle seed rutabaga okra yarrow cress avocado grape radish bush tomato ricebean black-eyed pea maize eggplant.</span>
-													</span>
-													<span class="task">
-														<span class="icon icon-checkmark"></span>
-														<span class="description">Cabbage lentil cucumber chickpea sorrel gram garbanzo plantain lotus root bok choy squash cress potato summer purslane salsify fennel horseradish dulse.</span>
-													</span>
-													<span class="task">
-														<span class="icon icon-checkmark"></span>
-														<span class="description">Winter purslane garbanzo artichoke broccoli lentil corn okra silver beet celery quandong.</span>
-													</span>
+							
 												</p>
 											</div>
 								  		</li>
 								  		<li>
-											<div class="cbp_tmtime"><span>Jan 2009 - March 2010</span> <span>Graphic Designer</span></div>
+											<div class="cbp_tmtime"><span>Ноябрь 2012 - декабрь 2014</span> <span>Сервисный инженер</span></div>
 											<div class="cbp_tmicon"><span class="icon icon-briefcase"></span></div>
 											<div class="cbp_tmlabel">
-												<h2>Acerrel Technologies</h2>
+												<h2>Сервисный центр "ЮНИМ"</h2>
 												<p>
 													<span class="task">
 														<span class="icon icon-checkmark"></span>
-														<span class="description">Winter purslane courgette pumpkin quandong komatsuna fennel green bean cucumber watercress.</span>
+														<span class="description">Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры.</span>
 													</span>
 													<span class="task">
 														<span class="icon icon-checkmark"></span>
-														<span class="description">Pea sprouts wattle seed rutabaga okra yarrow cress avocado grape radish bush tomato ricebean black-eyed pea maize eggplant.</span>
+														<span class="description">Восстановление данных.</span>
 													</span>
 													<span class="task">
 														<span class="icon icon-checkmark"></span>
-														<span class="description">Cabbage lentil cucumber chickpea sorrel gram garbanzo plantain lotus root bok choy squash cress potato summer purslane salsify fennel horseradish dulse.</span>
+														<span class="description">Консультирование и обучение пользователей.</span>
 													</span>
 													<span class="task">
 														<span class="icon icon-checkmark"></span>
-														<span class="description">Winter purslane garbanzo artichoke broccoli lentil corn okra silver beet celery quandong.</span>
+														<span class="description">Удаление баннеров.</span>
+													</span>
+												</p>
+											</div>
+								  		</li>
+										<li>
+											<div class="cbp_tmtime"><span>2011 - 2012</span> <span>Freelance</span></div>
+											<div class="cbp_tmicon"><span class="icon icon-briefcase"></span></div>
+											<div class="cbp_tmlabel">
+												<h2>Freelance</h2>
+												<p>
+													<span class="task">
+														<span class="icon icon-checkmark"></span>
+														<span class="description">Разработка сайтов визиток. Настройка удаленных серверов.</span>
 													</span>
 												</p>
 											</div>
