--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 						
 						<div class="section-content">
 							<div class="row">
-								<div class="col-xs-12 col-sm-6" id="col-1">
+								<div class="col-sm-4" id="col-1">
 									<div class="each">
 										<div class="label">Php</div>
 									</div>
@@ -296,7 +296,21 @@
 									</div>
 								</div>
 
-								<div class="col-xs-12 col-sm-6" id="col-2">
+								<div class="col-sm-4" id="col-2">
+									<div class="each">
+										<div class="label">Wordpress</div>
+									</div>
+									<div class="each">
+										<div class="label">Javascript</div>
+									</div>
+									<div class="each">
+										<div class="label">Zend</div>
+									</div>
+									<div class="each">
+										<div class="label">Photoshop</div>
+									</div>
+								</div>
+									<div class="col-sm-4" id="col-3">
 									<div class="each">
 										<div class="label">Wordpress</div>
 									</div>
