--- a/index.html
+++ b/index.html
@@ -283,48 +283,49 @@
 							<div class="row">
 								<div class="col-sm-4" id="col-1">
 									<div class="each">
-										<div class="label">Php</div>
+										<div class="label">Установка\настройка Windows</div>
 									</div>
 									<div class="each">
-										<div class="label">MySQL</div>
+										<div class="label">Знание железа ПК</div>
 									</div>
 									<div class="each">
-										<div class="label">HTML5</div>
+										<div class="label">Wordpress</div>
 									</div>
 									<div class="each">
-										<div class="label">CSS3</div>
+										<div class="label">jQuery/JavaScript</div>
 									</div>
 								</div>
 
 								<div class="col-sm-4" id="col-2">
 									<div class="each">
-										<div class="label">Wordpress</div>
+										<div class="label">AD\DNS\DHCP\RDP</div>
 									</div>
 									<div class="each">
-										<div class="label">Javascript</div>
+										<div class="label">Joomla</div>
 									</div>
 									<div class="each">
-										<div class="label">Zend</div>
+										<div class="label">CSS3</div>
 									</div>
 									<div class="each">
 										<div class="label">Photoshop</div>
 									</div>
 								</div>
-									<div class="col-sm-4" id="col-3">
+								<div class="col-sm-4" id="col-3">
 									<div class="each">
-										<div class="label">Wordpress</div>
+										<div class="label">Восстановление данных</div>
 									</div>
 									<div class="each">
-										<div class="label">Javascript</div>
+										<div class="label">phpBB</div>
 									</div>
 									<div class="each">
-										<div class="label">Zend</div>
+										<div class="label">HTML5</div>
 									</div>
 									<div class="each">
-										<div class="label">Photoshop</div>
-									</div>
+										<div class="label">MySQL</div>
+										</div>
 								</div>
 							</div>
+						</div>
 						</div>
 		  				<div class="clearfix"></div>
 		  			</section>
