--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<title>Платонов Александр</title>
 
 	<!-- favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-	<link href="img/favicon.ico" rel="icon" type="image/x-icon">
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="favicon.ico" rel="icon" type="image/x-icon">
 
 	<!-- css -->
 	<link href="css/bootstrap.css" rel="stylesheet">
