--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Платонов Александр</title>
+	<title>Резюме | Платонов Александр</title>
 
 	<!-- favicon -->
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
