--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=9"><![endif]-->
-	
+<!--[if IE]>
+	<meta http-equiv="refresh" content="0;url=http://pingall.ru/print" />
+<![endif]-->	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
