--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <!--[if IE]>
-	<meta http-equiv="refresh" content="0;url=http://pingall.ru/print" />
+<meta HTTP-EQUIV="REFRESH" content="0; url=http://www.google.com">
 <![endif]-->	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
