--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+
 <!--[if IE]>
-<meta HTTP-EQUIV="REFRESH" content="0; url=http://www.google.com">
-<![endif]-->	
+<script type="text/javascript">
+    window.location = "http://www.google.com";
+</script>
+<![endif]-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
@@ -22,8 +25,6 @@
 	<link href="css/vertical-timeline.css" rel="stylesheet">
 	<link href="css/style.min.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
-	
-	<!--[if IE]><link href="css/ie.css" rel="stylesheet"><![endif]-->
   
 </head>
 
