--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 <!--[if IE]>
 <script type="text/javascript">
-    window.location = "http://www.google.com";
+    window.location = "http://pingall.ru/print";
 </script>
 <![endif]-->
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
