--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Платонов Александр | Системное администрирование | WEB разработка</a>
+					<a class="navbar-brand" href="#">Платонов Александр | Системное администрирование</a>
 				</div>
 
 				<div class="collapse navbar-collapse">
