--- a/v2/index.html
+++ b/v2/index.html
@@ -17,12 +17,13 @@
 </header>
 <section class="cd-faq">
 	<ul class="cd-faq-categories">
-	   <div id="avatar"> <li><img src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="avatar"></li><div>
+	   <div id="avatar"> <li><img src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg"></li><div>
 		<li><a class="selected" href="#basics">Контактные данные</a></li>
-		<li><a href="#mobile">Опыт работы</a></li>
-		<li><a href="#account">Обучение</a></li>
-		<li><a href="#payments">Навыки</a></li>
-		<li><a href="#privacy">Прочее</a></li>
+		<li><a href="#experience">Опыт работы</a></li>
+		<li><a href="#learning">Обучение</a></li>
+		<li><a href="#skills">Навыки</a></li>
+		<li> <div id="printbutton"> <a href="http://pingall.ru/print">Печать</a><div></li>
+		
 	</ul> <!-- cd-faq-categories -->
 
 	<div class="cd-faq-items">
@@ -36,7 +37,7 @@
 			</li>
 		</ul> <!-- cd-faq-group -->
 
-		<ul id="mobile" class="cd-faq-group">
+		<ul id="experience" class="cd-faq-group">
 			<li class="cd-faq-title"><h2>Опыт работы</h2></li>
 			<li>
 				<a class="cd-faq-trigger" href="#0">Опыт работы</a>
@@ -47,7 +48,7 @@
 
 		</ul> <!-- cd-faq-group -->
 
-		<ul id="account" class="cd-faq-group">
+		<ul id="learning" class="cd-faq-group">
 			<li class="cd-faq-title"><h2>Обучение</h2></li>
 			<li>
 				<a class="cd-faq-trigger" href="#0">еще зуксель</a>
@@ -86,7 +87,7 @@
 			
 		</ul> <!-- cd-faq-group -->
 
-		<ul id="payments" class="cd-faq-group">
+		<ul id="skills" class="cd-faq-group">
 			<li class="cd-faq-title"><h2>Навыки</h2></li>
 			<li>
 				<a class="cd-faq-trigger" href="#0">Навыки</a>
@@ -101,7 +102,7 @@
 			<li>
 				<a class="cd-faq-trigger" href="#0">Прочее</a>
 				<div class="cd-faq-content">
-					<p>Прочее</p>
+					<p>Прочее<br>aasda<br>dfg<br>dfg<br>dfg<br>dfg<br>dfg<br>dfg</p>
 				</div> <!-- cd-faq-content -->
 			</li>
 
@@ -110,7 +111,7 @@
 	<a href="#0" class="cd-close-panel">Close</a>
 </section> <!-- cd-faq -->
 <script src="js/jquery-2.1.1.js"></script>
-<script src="js/jquery.mobile.custom.min.js"></script>
+<script src="js/jquery.experience.custom.min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
