--- a/v2/index.html
+++ b/v2/index.html
@@ -123,7 +123,7 @@
 					<div class="row">
 								<div class="col-sm-4" id="col-1">
 									<div class="each">
-										<div class="label">Установка\настройка Windows</div>
+										<div class="label">Установка\настройка ОС</div>
 									</div>
 									<div class="each">
 										<div class="label">Знание железа ПК</div>
