--- a/v2/index.html
+++ b/v2/index.html
@@ -6,6 +6,9 @@
 		window.location = "http://pingall.ru/print";
 	</script>
 	<![endif]-->
+		<!-- favicon -->
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="favicon.ico" rel="icon" type="image/x-icon">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
