--- a/v3/index.html
+++ b/v3/index.html
@@ -16,7 +16,7 @@
     <!-- ===========================
     SITE TITLE
     =========================== -->
-    <title>CVstrap - Free Bootstrap CV Template by EvenFly</title>
+    <title>Платонов Александр</title>
 
     <!-- ===========================
     FAVICONS
@@ -54,7 +54,7 @@
         ============================ -->
         <div id="header" class="row">
             <div class="col-sm-2">
-                <img class="propic" src="img/bappy.jpg" alt="">
+                <img class="propic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
             </div>
             <!-- photo end-->
 
@@ -62,7 +62,7 @@
                 <div class="cv-title">
                     <div class="row">
                         <div class="col-sm-7">
-                            <h1>Towkir A. Bappy</h1>
+                            <h1>Платонов Александр</h1>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
@@ -76,10 +76,10 @@
                             <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
                             <!-- AddToAny END -->
 
-                            <a class="btn btn-success" href=""><span class="fa fa-download"></span> Download</a>
+                            <a class="btn btn-success" href=""><span class="fa fa-download"></span>Распечатать</a>
                         </div>
                     </div>
-                    <h2>UI/UX Designer</h2>
+                    <h2>Системный администратор</h2>
                 </div><!-- Title end-->
 
                 <!-- ===========================
@@ -108,16 +108,6 @@
                         </ul>
                     </div><!-- social 2nd col end-->
 
-                    <div class="col-sm-4">
-                        <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-behance"></span>Behance</a>
-                            </li>
-                            <li><a href=""><span class="social fa fa-dribbble"></span>Dribbble</a>
-                            </li>
-                            <li><a href=""><span class="social fa fa-instagram"></span>Instagram</a>
-                            </li>
-                        </ul>
-                    </div><!-- social 3rd col end-->
                 </div><!-- header social end-->
             </div><!-- header right end-->
         </div><!-- header end-->
