--- a/v3/index.html
+++ b/v3/index.html
@@ -11,7 +11,7 @@
     =========================== -->
     <meta name="description" content="CVstrap is another Free minimal CV HTML theme by EvenFly built with Bootstrap 3.3.0. and released under CC-3.0 license.">
     <meta name="keywords" content="curriculum vitae, cv, one page, onepage, bootstrap, responsive, resume, timeline, free cv">
-    <meta name="author" content="Mamun Srizon">
+    <meta name="author" content="Платонов Александр">
 
     <!-- ===========================
     SITE TITLE
