--- a/v3/index.html
+++ b/v3/index.html
@@ -142,9 +142,9 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h4>заголовок</h4>
-                            <p class="sub"><a href="">Ideal Institute of Science and Technology</a>
+                            <p class="sub"><a href="">ссылка</a>
                             </p>
-                            <p>Studying all aspect of Graphic Design Including Advertising Design, Branding, Copy Exhibition Design, Ilustration, Information Design, Packaging Design and Website Design</p>
+                            <p>текст</p>
                         </div>
 
                         <div class="year col-md-3">
