--- a/v4/index.html
+++ b/v4/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0040)http://getskeleton.com/examples/landing/ -->
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
+  <title>Boilerplate тест</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -42,11 +42,6 @@
       <div class="row">
         <div class="one-half column">
           <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-          <a class="button button-primary" href="http://getskeleton.com/">Try Skeleton</a>
-        </div>
-        <div class="one-half column phones">
-          <img class="phone" src="./Skeleton_ Responsive CSS Boilerplate_files/iphone.png">
-          <img class="phone" src="./Skeleton_ Responsive CSS Boilerplate_files/iphone.png">
         </div>
       </div>
     </div>
@@ -76,9 +71,8 @@
 
   <div class="section get-help">
     <div class="container">
-      <h3 class="section-heading">Need help getting started?</h3>
+      <h3 class="section-heading">Заголовок</h3>
       <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If you want to learn more, just visit the documentation!</p>
-      <a class="button button-primary" href="http://getskeleton.com/">View Skeleton Docs</a>
     </div>
   </div>
 
