--- a/v4/index.html
+++ b/v4/index.html
@@ -19,17 +19,14 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="http://getskeleton.com/dist/css/normalize.css">
-  <link rel="stylesheet" href="http://getskeleton.com/dist/css/skeleton.css">
-  <link rel="stylesheet" href="http://getskeleton.com/examples/landing/css/custom.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/custom.css">
 
-  <!-- Scripts
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <style type="text/css"></style><script src="./Skeleton_ Responsive CSS Boilerplate_files/jquery.min.js"></script>
-
+ 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="http://getskeleton.com/dist/images/favicon.png">
+
 
 </head>
 <body>
