--- a/v3/index.html
+++ b/v3/index.html
@@ -9,8 +9,8 @@
     <!-- ===========================
     THEME INFO
     =========================== -->
-    <meta name="description" content="CVstrap is another Free minimal CV HTML theme by EvenFly built with Bootstrap 3.3.0. and released under CC-3.0 license.">
-    <meta name="keywords" content="curriculum vitae, cv, one page, onepage, bootstrap, responsive, resume, timeline, free cv">
+    <meta name="description" content="Just resume">
+    <meta name="keywords" content="resume, system, admin">
     <meta name="author" content="Платонов Александр">
 
     <!-- ===========================
@@ -69,7 +69,7 @@
                             <a class="a2a_dd btn btn-default" href=""><span class="fa fa-share "></span> Share</a>
                             <script type="text/javascript">
                                 var a2a_config = a2a_config || {};
-                                a2a_config.linkname = "Minimal CV by EvenFly";
+                                a2a_config.linkname = "сылка";
                                 a2a_config.num_services = 6;
                                 a2a_config.prioritize = ["facebook", "twitter", "google_plus", "linkedin", "pinterest", "email"];
                             </script>
@@ -88,11 +88,11 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-home"></span>EvenFly.com</a>
+                            <li><a href=""><span class="social fa fa-vk"></span>vk.com</a>
                             </li>
-                            <li><a href=""><span class="social fa fa-skype"></span>+88 0123 45678</a>
+                            <li><a href=""><span class="social fa fa-phone"></span>+79218475171</a>
                             </li>
-                            <li><a href="mailto:support@evenfly.com"><span class="social fa fa-envelope-o"></span>me@mail.com</a>
+                            <li><a href="mailto:planol@me.com"><span class="social fa fa-envelope-o"></span>mail</a>
                             </li>
                         </ul>
                     </div><!-- social 1st col end-->
