--- a/v0/index.html
+++ b/v0/index.html
@@ -45,13 +45,13 @@
         HEADER
         ============================ -->
 			<div id="header" class="row">
-				    <div class="col-lg-8">
+				    <div class="col-lg-8 col-md-8 col-sm-6 col-xs-4">
 					  <!--Sidebar content-->
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-8 col-sm-6 col-xs-4">
 					  <!--Body content-->
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-8 col-sm-6 col-xs-4">
 					  <!--Body content-->
 					</div>
 		
