--- a/v0/index.html
+++ b/v0/index.html
@@ -41,17 +41,27 @@
 </head>
 <body>
 		<div class="container">
+			<!-- ===========================
+			navbar
+			============================ -->
+			<nav class="navbar navbar-inverse navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="#">Платонов Александр | Системное администрирование</a>
+					</div>
+				</div>
+			</nav>
 		<!-- ===========================
-        HEADER
+        Content
         ============================ -->
-			<div id="header" class="row">
-				    <div class="col-lg-8 col-md-8 col-sm-6 col-xs-4">
+			<div id="content" class="row">
+				    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 					  <!--Sidebar content-->
 					</div>
-					<div class="col-lg-8 col-md-8 col-sm-6 col-xs-4">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 					  <!--Body content-->
 					</div>
-					<div class="col-lg-8 col-md-8 col-sm-6 col-xs-4">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 					  <!--Body content-->
 					</div>
 		
