--- a/v0/index.html
+++ b/v0/index.html
@@ -44,7 +44,7 @@
 			<!-- ===========================
 			navbar
 			============================ -->
-			<nav class="navbar navbar-inverse navbar-fixed-top">
+			<nav class="navbar navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="#">Платонов Александр | Системное администрирование</a>
