--- a/v0/index.html
+++ b/v0/index.html
@@ -49,7 +49,7 @@
 					<div class="navbar-header">
 						<a class="navbar-brand" href="#">Платонов Александр | Системное администрирование</a>
 					</div>
-					<button type="button" class="btn btn-default navbar-btn">Распечатать</button>
+					<button type="button" class="btn btn-default">Распечатать</button>
 				</div>
 			</nav>
 		<!-- ===========================
