--- a/v0/index.html
+++ b/v0/index.html
@@ -47,7 +47,7 @@
 			<nav class="navbar navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="#">Платонов Александр | Системное администрирование</a>
+						<a class="navbar-brand">Платонов Александр | Системное администрирование</a>
 					</div>
 					<button type="button" class="btn btn-default navbar-btn">Распечатать</button>
 				</div>
