--- a/v0/index.html
+++ b/v0/index.html
@@ -50,6 +50,7 @@
 						<a class="navbar-brand">Платонов Александр | Системное администрирование</a>
 					</div>
 					<button type="button" class="btn btn-default navbar-btn">Распечатать</button>
+					<a class="print" type="button" href="">Распечатать</a>
 				</div>
 			</nav>
 		<!-- ===========================
