--- a/v0/index.html
+++ b/v0/index.html
@@ -49,8 +49,7 @@
 					<div class="navbar-header">
 						<a class="navbar-brand">Платонов Александр | Системное администрирование</a>
 					</div>
-					<button type="button" class="btn btn-default navbar-btn">Распечатать</button>
-					<a class="print" type="button" href="">Распечатать</a>
+					<button type="button" class="printbtn btn btn-default navbar-btn">Распечатать</button>
 				</div>
 			</nav>
 		<!-- ===========================
