--- a/v0/index.html
+++ b/v0/index.html
@@ -56,13 +56,13 @@
         Content
         ============================ -->
 			<div id="content" class="row">
-				    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+				    <div class="col-xs-6 col-md-4">
 					  <!--Sidebar content-->
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+					<div class="col-xs-6 col-md-4">
 					  <!--Body content-->
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+					<div class="col-xs-6 col-md-4">
 					  <!--Body content-->
 					</div>
 		
