--- a/v0/index.html
+++ b/v0/index.html
@@ -48,7 +48,7 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand">Платонов Александр | Системное администрирование</a>
-						<button type="button" class="printbtn btn btn-default navbar-btn">Распечатать</button>
+						<button type="button" class="printbtn btn btn-default navbar-btn hidden-sm hidden-xs">Распечатать</button>
 					</div>
 				</div>
 			</nav>
