--- a/v0/index.html
+++ b/v0/index.html
@@ -52,6 +52,7 @@
 					</div>
 				</div>
 			</nav>
+			<div class="clearfix"></div>
 		<!-- ===========================
         Content
         ============================ -->
@@ -68,5 +69,6 @@
 		
 			</div>
 		</div>
+		<div class="clearfix"></div>
 </body>
 </html>
