--- a/v0/index.html
+++ b/v0/index.html
@@ -47,7 +47,8 @@
 			<nav class="navbar navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
-						<a class="navbar-brand">Платонов Александр | Системное администрирование</a>
+						<a class="navbar-brand">Платонов Александр</a>
+						<a class="navbar-brand">Системное администрирование</a>
 						<button type="button" class="printbtn btn btn-default navbar-btn hidden-sm hidden-xs">Распечатать</button>
 					</div>
 				</div>
