--- a/v0/index.html
+++ b/v0/index.html
@@ -48,8 +48,8 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand">Платонов Александр</a>
-						<a class="navbar-spec hidden-xs">| Системное администрирование</a>
-						<button type="button" class="printbtn btn btn-default navbar-btn hidden-sm hidden-xs">Распечатать</button>
+						<a class="navbar-spec hidden-xs">Системное администрирование</a>
+						<button type="button" class="printbtn btn btn-default navbar-btn hidden-sm">Распечатать</button>
 					</div>
 				</div>
 			</nav>
