--- a/v0/index.html
+++ b/v0/index.html
@@ -49,7 +49,7 @@
 					<div class="navbar-header">
 						<a class="navbar-brand">Платонов Александр</a>
 						<a class="navbar-brand navbar-spec hidden-xs">Системное администрирование</a>
-						<button type="button" class="printbtn btn btn-default navbar-btn">Распечатать</button>
+						<button type="button" class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
 					</div>
 				</div>
 			</nav>
