--- a/v0/index.html
+++ b/v0/index.html
@@ -40,7 +40,7 @@
     <![endif]-->
 </head>
 <body>
-		<div class="container">
+		<div class="container menu-color">
 			<!-- ===========================
 			navbar
 			============================ -->
