--- a/v0/index.html
+++ b/v0/index.html
@@ -44,7 +44,7 @@
 			<!-- ===========================
 			navbar
 			============================ -->
-			<nav class="navbar navbar-fixed-top">
+			<nav class="navbar navbar-fixed-top menu-color">
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand">Платонов Александр</a>
