--- a/v0/index.html
+++ b/v0/index.html
@@ -47,7 +47,7 @@
 			<nav class="navbar navbar-fixed-top menu-color">
 				<div class="container">
 					<div class="navbar-header">
-						<a class="navbar-brand">Платонов Александр</a>
+						<a class="navbar-brand marg">Платонов Александр</a>
 						<a class="navbar-brand navbar-spec hidden-xs">| Системное администрирование</a>
 						<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
 					</div>
