--- a/v0/index.html
+++ b/v0/index.html
@@ -58,16 +58,19 @@
         Content
         ============================ -->
 			<div id="content" class="row">
-				    <div class="col-xs-6 col-md-4">
+				    <div class="col-xs-4 col-md-4">
 					  <!--Sidebar content-->
+					  <img class="pofilepic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 					</div>
-					<div class="col-xs-6 col-md-4">
+					<div class="col-xs-8 col-md-4">
 					  <!--Body content-->
 					</div>
-					<div class="col-xs-6 col-md-4">
+					<div class="col-xs-12 col-md-4">
 					  <!--Body content-->
 					</div>
-		
+					<div class="col-xs-12 col-md-12">
+					  <!--Body content-->
+					</div>
 			</div>
 		</div>
 		<div class="clearfix"></div>
