--- a/v0/index.html
+++ b/v0/index.html
@@ -58,7 +58,7 @@
         Content
         ============================ -->
 			<div id="content" class="row">
-				    <div class="col-xs-4 col-md-4">
+				    <div class="col-xs-4 col-sm-4 col-md-1 col-lg-1">
 					  <!--Sidebar content-->
 					  <img class="pofilepic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 					</div>
