--- a/v0/index.html
+++ b/v0/index.html
@@ -58,17 +58,17 @@
         Content
         ============================ -->
 			<div id="content" class="row">
-				    <div class="col-xs-4 col-sm-4 col-md-1 col-lg-1">
+				    <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
 					  <img class="pofilepic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 					</div>
-					<div class="col-xs-8 col-md-4">
+					<div class="col-xs-8 col-md-4 col-md-5 col-lg-5">
 					  <!--Body content-->
 					</div>
-					<div class="col-xs-12 col-md-4">
+					<div class="col-xs-12 col-md-4 col-md-5 col-lg-5">
 					  <!--Body content-->
 					</div>
-					<div class="col-xs-12 col-md-12">
+					<div class="col-xs-12 col-md-12 col-md-1 col-lg-1">
 					  <!--Body content-->
 					</div>
 			</div>
