--- a/v0/index.html
+++ b/v0/index.html
@@ -44,11 +44,12 @@
 			<!-- ===========================
 			navbar
 			============================ -->
-			<nav class="navbar navbar-fixed-top menu-color">
+			<nav class="navbar navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand marg">Платонов Александр</a>
-						<a class="navbar-brand navbar-spec hidden-xs">| Системное администрирование</a>
+						<a class="navbar-brand navbar-spec hidden-xs fa fa-chevron-circle-right"> Системное администрирование</a>
+						<a class="navbar-brand navbar-spec hidden-xs fa fa-chevron-circle-right"> WEB разработка</a>
 						<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
 					</div>
 				</div>
