--- a/v0/index.html
+++ b/v0/index.html
@@ -49,7 +49,7 @@
 					<div class="navbar-header">
 						<a class="navbar-brand marg">Платонов Александр</a>
 						<a class="navbar-brand navbar-spec hidden-xs fa fa-chevron-circle-right"> Системное администрирование</a>
-						<a class="navbar-brand navbar-spec hidden-xs fa fa-chevron-circle-right"> WEB разработка</a>
+						<a class="navbar-brand navbar-spec hidden-xs hidden-md fa fa-chevron-circle-right"> WEB разработка</a>
 						<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
 					</div>
 				</div>
