--- a/v0/index.html
+++ b/v0/index.html
@@ -61,7 +61,9 @@
 			<div id="content" class="row">
 				    <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
-					  <img class="pofilepic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+					  <div id="contacts" class="info">
+					  <img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+					  </div>
 					</div>
 					<div class="col-xs-8 col-sm-4 col-md-5 col-lg-5">
 					  <!--Body content-->
