--- a/v0/index.html
+++ b/v0/index.html
@@ -62,7 +62,15 @@
 				    <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
 					  <div id="contacts" class="info">
-					  <img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+							<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+							<ul class="list-unstyled">
+                            <li><a href=""><span class="social fa fa-vk"></span>vk.com</a>
+                            </li>
+                            <li><a href=""><span class="social fa fa-phone"></span>+79218475171</a>
+                            </li>
+                            <li><a href="mailto:planol@me.com"><span class="social fa fa-envelope-o"></span>mail</a>
+                            </li>
+                        </ul>
 					  </div>
 					</div>
 					<div class="col-xs-8 col-sm-4 col-md-5 col-lg-5">
