--- a/v0/index.html
+++ b/v0/index.html
@@ -66,7 +66,6 @@
 								<div id="personal-info" class="adjust-top">
 						
 						<div id="each-holder">
-							<div class="top-decorator"></div>
 							<div class="each">
 								<div class="icon">
 									<span class="icon icon-map"></span><span class="icon icon-map"></span>
@@ -78,7 +77,7 @@
 								<div class="icon">
 									<span class="icon icon-phone-hang-up"></span><span class="icon icon-phone-hang-up"></span>
 								</div>
-								<div class="info">+79218475171</div>
+								<div class="info fa fa-phone-square"> +79218475171</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
