--- a/v0/index.html
+++ b/v0/index.html
@@ -67,7 +67,7 @@
 						
 						<div id="each-holder">
 							<div class="each">
-								<div class="info">Гатчина</div>
+								<div class="info fa fa-map-marker">Гатчина</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
@@ -75,7 +75,7 @@
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
-								<div class="info"><p><a href="mailto:planol@me.com">planol@me.com</a></p></div>
+								<div class="info fa fa-envelope-o"><p><a href="mailto:planol@me.com">planol@me.com</a></p></div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
