--- a/v0/index.html
+++ b/v0/index.html
@@ -67,15 +67,18 @@
 						
 						<div id="each-holder">
 							<div class="each">
-								<div class="info fa fa-map-marker"> Гатчина</div>
+								<i class="fa fa-map-marker"></i>
+								<div class="info"> Гатчина</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
-								<div class="info fa fa-phone-square"> +79218475171</div>
+								<i class="fa fa-phone-square"></i>
+								<div class="info">+79218475171</div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="each">
-								<div class="info fa fa-envelope-o"><p><a href="mailto:planol@me.com"> planol@me.com</a></p></div>
+								<i class="fa fa-envelope-o"></i>
+								<div class="info"><p><a href="mailto:planol@me.com"> planol@me.com</a></p></div>
 								<div class="clearfix"></div>
 							</div>
 						</div>
