--- a/v0/index.html
+++ b/v0/index.html
@@ -66,17 +66,17 @@
 								<div id="personal-info" class="adjust-top">
 									
 									<div id="contactf">
-									<div class="each">
+									<div class="each btn btn-default">
 										<i class="fa fa-map-marker"></i>
 										<div class="info"> Гатчина</div>
 										<div class="clearfix"></div>
 									</div>
-									<div class="each">
+									<div class="each btn btn-default">
 										<i class="fa fa-phone-square"></i>
 										<div class="info">+79218475171</div>
 										<div class="clearfix"></div>
 									</div>
-									<div class="each">
+									<div class="each btn btn-default">
 										<i class="fa fa-envelope-o"></i>
 										<div class="info"><p><a href="mailto:planol@me.com"> planol@me.com</a></p></div>
 										<div class="clearfix"></div>
