--- a/v0/index.html
+++ b/v0/index.html
@@ -48,10 +48,10 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand marg">Платонов Александр</a>
-						<i class="fa fa-chevron-circle-right"></i>
+						<i class="navbar-brand marg navbar-spec fa fa-desktop"></i>
 						<a class="navbar-brand marg navbar-spec hidden-xs "> Системное администрирование</a>
-						<i class="fa fa-chevron-circle-right"></i>
-						<a class="navbar-brand marg navbar-spec hidden-xs hidden-sm hidden-md fa fa-chevron-circle-right"> WEB разработка</a>
+						<i class="navbar-brand marg navbar-spec fa fa-file-o"></i>
+						<a class="navbar-brand marg navbar-spec hidden-xs hidden-sm hidden-md"> WEB разработка</a>
 						<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
 					</div>
 				</div>
