--- a/v0/index.html
+++ b/v0/index.html
@@ -48,9 +48,9 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand marg">Платонов Александр</a>
-						<i class="navbar-brand marg navbar-spec fa fa-desktop"></i>
+						<i class="navbar-brand marg1 navbar-spec fa fa-desktop hidden-xs"></i>
 						<a class="navbar-brand marg navbar-spec hidden-xs "> Системное администрирование</a>
-						<i class="navbar-brand marg navbar-spec fa fa-file-o"></i>
+						<i class="navbar-brand marg1 navbar-spec fa fa-file-o hidden-xs hidden-sm hidden-md"></i>
 						<a class="navbar-brand marg navbar-spec hidden-xs hidden-sm hidden-md"> WEB разработка</a>
 						<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
 					</div>
