--- a/v0/index.html
+++ b/v0/index.html
@@ -47,7 +47,8 @@
 			<nav class="navbar navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
-						<a class="navbar-brand marg">Платонов Александр</a>
+						<i class="navbar-brand marg1 navbar-spec fa fa-user hidden-xs"></i>
+						<a class="navbar-brand marg navbar-spec">Платонов Александр</a>
 						<i class="navbar-brand marg1 navbar-spec fa fa-desktop hidden-xs"></i>
 						<a class="navbar-brand marg navbar-spec hidden-xs "> Системное администрирование</a>
 						<i class="navbar-brand marg1 navbar-spec fa fa-file-o hidden-xs hidden-sm hidden-md"></i>
