--- a/v0/index.html
+++ b/v0/index.html
@@ -69,7 +69,7 @@
 								<div id="personal-info hidden-print" class="adjust-top">
 									
 									<div id="contactf">
-									<div class="each btn btn-default cbtn">
+									<div class="each btn btn-default cbtn" onclick="pop('popDiv')">
 										<i class="fa fa-map-marker"></i>
 										<div class="info">Гатчина</div>
 										<div class="clearfix"></div>
@@ -100,5 +100,7 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
+	<script src="js/google-map.js"></script>
+	<script src="js/map.js"></script>
 </body>
 </html>
