--- a/v0/index.html
+++ b/v0/index.html
@@ -72,6 +72,21 @@
 									<div class="each btn btn-default cbtn" onclick="pop('popDiv')">
 										<i class="fa fa-map-marker"></i>
 										<div class="info">Гатчина</div>
+												<div id="popDiv" class="ontop">
+			<table border="1" id="popup">
+				<tr>
+					<td>
+						This is can be used as a popup window
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Click Close OR escape button to close it
+						<a href="#" onClick="hide('popDiv')">Close</a>
+					</td>
+				</tr>
+			</table>
+		</div>
 										<div class="clearfix"></div>
 									</div>
 									<div class="each btn btn-default cbtn">
