--- a/v0/index.html
+++ b/v0/index.html
@@ -103,9 +103,9 @@
 		<div id="popDiv" class="ontop">
 			<table border="1" id="popup">
 				<tr>
-					<td>
-						This is can be used as a popup window
-					</td>
+					
+						<div id="map" class="col-xs-12"></div>
+					
 				</tr>
 				<tr>
 					<td>
