--- a/v0/index.html
+++ b/v0/index.html
@@ -70,14 +70,12 @@
 									<div id="contactf">
 									<div class="each btn btn-default cbtn" onclick="pop('popDiv')">
 										<i class="fa fa-map-marker"></i>
-										<div class="info">Гатчина</div>
-										<div class="popup-wrapper">
+										<div class="info popup-wrapper">Гатчина</div>
 										<input type="checkbox" class="popup-checkbox" id="popupCheckboxOne">
 										<div class="popup">
 											<div class="popup-content">
 											<label for="popupCheckboxOne" class="popup-closer">×</label>
 												Popup text
-											  </div>
 											</div>
 										  </div>		
 										<div class="clearfix"></div>
