--- a/v0/index.html
+++ b/v0/index.html
@@ -68,20 +68,12 @@
 							<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 								<div id="personal-info hidden-print" class="adjust-top">								
 									<div id="contactf">
-									<div class="each btn btn-default cbtn" type="checkbox" class="popup-checkbox" id="popupCheckboxOne">
+									<div class="each btn btn-default cbtn" onclick="popupOpen();">
 										<i class="fa fa-map-marker"></i>
-										<div class="info popup-wrapper">Гатчина</div>
-										
-										<div class="popup">
-											<div class="popup-content">
-											<label for="popupCheckboxOne" class="popup-closer">×</label>
-												Popup text
-		
-										  </div>	
-										</div>	
-												</div>										
+										<div class="info">Гатчина</div>									
 										<div class="clearfix"></div>
 										</div>
+									</div>	
 									<div class="each btn btn-default cbtn">
 										<i class="fa fa-phone-square"></i>
 										<div class="info">+79218475171</div>
