--- a/v0/index.html
+++ b/v0/index.html
@@ -99,6 +99,14 @@
 					</div>
 			</div>
 		</div>
+		<div class="popup" id="popup" style="display:none;">
+		  <div class="popup-inner">
+			<input type="button" name="Close" class="s3-btn-close" onclick="popupClose();" value="&times;">
+			
+			<h2>This is popup</h2>
+			<p>Hey I am a popup overlay working with JavaScript</p>
+		  </div>
+		</div>
 		<div class="clearfix"></div>
 	<script src="js/google-map.js"></script>
 	<script src="js/map.js"></script>
