--- a/v0/index.html
+++ b/v0/index.html
@@ -99,6 +99,7 @@
 					</div>
 			</div>
 		</div>
+		<div class="overlay" id="overlay" style="display:none;"></div>
 		<div class="popup" id="popup" style="display:none;">
 		  <div class="popup-inner">
 			<input type="button" name="Close" class="s3-btn-close" onclick="popupClose();" value="&times;">
