--- a/v0/index.html
+++ b/v0/index.html
@@ -105,7 +105,7 @@
 			<input type="button" name="Close" class="s3-btn-close" onclick="popupClose();" value="&times;">
 			
 			<h2>This is popup</h2>
-			<p>Hey I am a popup overlay working with JavaScript</p>
+			<div id="map" class="col-xs-12 col-sm-6"></div>
 		  </div>
 		</div>
 		<div class="clearfix"></div>
