--- a/v0/index.html
+++ b/v0/index.html
@@ -68,7 +68,7 @@
 							<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 								<div id="personal-info hidden-print" class="adjust-top">								
 									<div id="contactf">
-										<div class="each btn btn-default cbtn" onclick="popupOpen();">
+										<div class="each btn btn-default cbtn">
 											<i class="fa fa-map-marker"></i>
 											<div class="info">Гатчина</div>									
 										</div>
