--- a/v0/index.html
+++ b/v0/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
 
     <!-- ===========================
     THEME INFO
@@ -90,6 +93,9 @@
 			</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
+					  <input id = "btnShow" type="button" value="Show Maps"/>
+<div id="dialog" style="display: none">
+<div id="dvMap" style="height: 380px; width: 580px;">
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
@@ -100,5 +106,6 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
+			<script src="js/map.js"></script>
 </body>
 </html>
