--- a/v0/index.html
+++ b/v0/index.html
@@ -70,10 +70,14 @@
 								<div id="contacts" class="info">
 									<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 										<div id="personal-info hidden-print" class="adjust-top">								
-											<div id="contactf">
+											<div id="contactf btnShow">
 												<div class="each btn btn-default cbtn">
 													<i class="fa fa-map-marker"></i>
-													<div class="info">Гатчина</div>									
+													<div class="info">Гатчина</div>	
+						<div id="dialog" style="display: none">
+							<div id="dvMap" style="height: 380px; width: 580px;">
+							</div>
+						</div>													
 												</div>
 												<div class="clearfix"></div>
 											</div>	
