--- a/v0/index.html
+++ b/v0/index.html
@@ -73,7 +73,10 @@
 											<div id="contactf">
 												<div class="each btn btn-default cbtn">
 													<i class="fa fa-map-marker"></i>
-													<div class="info">Гатчина</div>											
+													<div class="info">Гатчина</div>	
+														<div id="dialog">
+															<div id="dvMap"></div>
+														</div>													
 												</div>
 												<div class="clearfix"></div>
 											</div>	
@@ -92,11 +95,7 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-					  <input id = "btnShow" type="button" value="Show Maps"/>
-						<div id="dialog" style="display: none">
-							<div id="dvMap" style="height: 380px; width: 580px;">
-							</div>
-						</div>
+
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
